--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "mongodb": "^6.2.0",
     "react": "^18.2.0",
