--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "mongodb": "^6.2.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -17,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
