--- a/src/server/.env
+++ b/src/server/.env
@@ -1,2 +1,3 @@
 ATLAS_URI=mongodb+srv://carsten:j5Ex9wLwhXX0ssIx@cluster0.bcltmej.mongodb.net/myFirstDatabase
 ADMIN_ID=65462fccc53ca6d21c7c41be
+NODE_ENV=development
