--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,7 +48,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/user-event": "^14.5.1"
   }
 }
